# comptext-mcp-server

./: .coverage  .dockerignore  .editorconfig  .env.example  .env.mobile.example  .gitattributes  .gitignore  .pre-commit-config.yaml  =2.0.0  =4.1.0  AGENTS.md  BRANCH_ANALYSIS.md  BRANCH_ANALYSIS_EN.md  BRANCH_CLEANUP_GUIDE.md  CHANGELOG.md  CITATION.cff  CLAUDE_DESKTOP_SETUP.md  CLAUDE_SETUP.md  CODEOWNERS  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.rest  FIXES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LAUNCH.md  LICENSE  MANIFEST.in  Makefile  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  RECOMMENDATION.md  ROADMAP.md  SECURITY.md  TEST_RESULTS.md  TODO.md  coverage.xml  delete_obsolete_branches.sh  (+13 more)
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  nl2comptext_compiler.yml
.github/workflows/: ci.yml  docker-publish.yml  quality.yml  release.yml
app/: layout.tsx  page.tsx
bundles/: bundles.yaml
codex/: modules.yaml
components/: agent-card.tsx  agent-list.tsx  header.tsx
configs/: claude_desktop_config.json  claude_desktop_config_uv.json  claude_desktop_config_venv.json
data/: README.md  codex.json
docs/: API.md  BRANCH_STRATEGY.md  COMPILER_SPEC.md  FAQ.md  GITHUB_AUTOMATION.md  GITHUB_QUICK_REFERENCE.md  MIGRATION.md  mobile-agent.md
examples/: github_automation_example.py  local_codex_example.py
examples/mobile_agent/: baseline_measurement.py  basic_usage.py  comptext_comparison.py  demo_use_cases.py  quick_start.py  test_ollama_connection.py
lib/: mock-data.ts
scripts/: cleanup-branches.sh
src/comptext_mcp/: __init__.py  constants.py  github_client.py  local_codex_client.py  logging_config.py  metrics.py  notion_client.py  server.py  utils.py  yaml_client.py
src/comptext_mcp/compiler/: __init__.py  canonicalize.py  matcher.py  nl_to_comptext.py  registry.py
src/comptext_mcp/mobile_agent/: __init__.py  cli.py  config.py  droidrun_wrapper.py  ollama_client.py  prometheus_metrics.py  websocket_server.py
src/comptext_mcp/mobile_agent/agents/: __init__.py  mobile_agent.py
src/comptext_mcp/mobile_agent/schemas/: __init__.py  mobile_schema.py
src/comptext_mcp/mobile_agent/tools/: __init__.py  mcp_tools.py
src/comptext_mcp/mobile_agent/utils/: __init__.py  logging.py  metrics.py  screenshot.py  ui_parser.py
tests/: test_cli.py  test_compiler_comprehensive.py  test_droidrun_wrapper.py  test_github_client.py  test_mobile_agent.py  test_nl_to_comptext.py  test_ollama_client.py  test_prometheus.py  test_suite.py  test_utils.py  test_websocket.py
tests/fixtures/: golden_prompts.json
types/: README.md  agent-mcp.example.ts  agent-mcp.ts
